--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Language" content="en">
+    <meta name="description" content="Email# contact @ reillyraab.com (Hosted by protonmail.ch) PGP Public Key (RSA 4096) -----BEGIN PGP PUBLIC KEY BLOCK----- Version: OpenPGP.js v4.10.1 Comment: https://openpgpjs.org xsFNBFtShegBEADDWZlP6KpR8A6VVHCba0H+x7zRu4dWXiZr6o9jXtN2IWcR ZyNrnwOWYwDYrRsTFunwJkIyX/IC4CqiAhF+kPy0KuMFP0YRlCAjBqUhXmGy tcJqdlNft+fl252MlA1oLbW1w8Aq1cx5rRwqKtfn2LwyMtDQhKAbcrS1xOT5 O6nnI2c1lSaPcjavf4B93O9t0z6OPljpp/fzTWZ/RHwyXmG8lEeI8Dulo22W Uot9iW+5uub6PM01OXptlAaEy/QXEIgox6SjUNeODVM4pByZGInqpDRgjYWe bEqI85MET3OsAMFCEarDl/qxj8kQCWB8fZJ2X5xBQzQF34AnMXcZZiRskJa7 7g/heWNEzlG9VXSckz0FcEtv5D7FiE0cd7+JpCaMrZY4hiSjP0HnZG71q45o qt36iGZudrmO4Q/w/vWrbKHpbft5n7yzzDiZQci5Z5qiLbsl3+JelzujrzXN …"/>
 
     <title>
 Contact    </title>
@@ -116,13 +117,8 @@ Contact    </title>
                   </a>
                 </li>
                 <li>
-                  <a href="reading-list.html">
-                    Digital Bookshelf
-                  </a>
-                </li>
-                <li>
-                  <a href="publications.html">
-                    Publications
+                  <a href="site-info.html">
+                    Site Info
                   </a>
                 </li>
               </ul>
