--- a/dark-chess.html
+++ b/dark-chess.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Language" content="en">
+    <meta name="description" content="Free Online Dark-Chess for Correspondence Play. Send links encoding state to opponent."/>
 
     <title>
 Dark-Chess    </title>
@@ -116,13 +117,8 @@ Dark-Chess    </title>
                   </a>
                 </li>
                 <li>
-                  <a href="reading-list.html">
-                    Digital Bookshelf
-                  </a>
-                </li>
-                <li>
-                  <a href="publications.html">
-                    Publications
+                  <a href="site-info.html">
+                    Site Info
                   </a>
                 </li>
               </ul>
@@ -171,7 +167,7 @@ Dark-Chess    </title>
           #title-header{ display: none; }
           #top-spacer { display: none; }
         </style>
-<h2>Dark-Chess For Correspondence Play</h2>
+<h3>Dark-Chess For Correspondence Play</h3>
 <link href="/css/chess.css" rel="stylesheet" type="text/css"/>
 <script src="/theme/js/lib/jquery.js"></script>
 <script src="/js/chessboard.js"></script>
