--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Language" content="en">
+    <meta name="description" content="This site is a space for me to share my interest in various subjects, publish personal essays, and communicate about projects or developments which are important to me."/>
 
     <title>
 Reilly Raab    </title>
@@ -116,13 +117,8 @@ Reilly Raab    </title>
                   </a>
                 </li>
                 <li>
-                  <a href="reading-list.html">
-                    Digital Bookshelf
-                  </a>
-                </li>
-                <li>
-                  <a href="publications.html">
-                    Publications
+                  <a href="site-info.html">
+                    Site Info
                   </a>
                 </li>
               </ul>
@@ -185,47 +181,36 @@ Reilly Raab    </title>
         </li>
         <li>
             <p>
-                <a href="reading-list.html">
-                    Digital Bookshelf
-                </a>
-            </p>
-        </li>
-        <li>
-            <p>
-                <a href="publications.html">
-                    Publications
+                <a href="site-info.html">
+                    Site Info
                 </a>
             </p>
         </li>
     </ul>
 
     <h2>
-        Public Thoughts
+        Articles
     </h2>
     <ul class="toc">
         <li>
             <p>
-                <a href="facebook.html">
-                    <span style="font-family: monospace; color: var(--w0);">
-                    [Apr 2018]
-                    </span>
-                    It's So Much Bigger Than Facebook
+                <a href="reading-list.html">
+                    <code>Jul 2018</code>
+                    Digital Bookshelf
                 </a>
             </p>
         </li>
         <li>
             <p>
                 <a href="demo.html">
-                    <span style="font-family: monospace; color: var(--w0);">
-                    [Jan 2018]
-                    </span>
+                    <code>Jan 2018</code>
                     Markdown Demo
                 </a>
             </p>
         </li>
     </ul>
     <h2>
-        For fun
+        Other
     </h2>
     <ul class="toc">
         <li>
