--- a/private.html
+++ b/private.html
@@ -115,13 +115,8 @@ Links    </title>
                   </a>
                 </li>
                 <li>
-                  <a href="reading-list.html">
-                    Digital Bookshelf
-                  </a>
-                </li>
-                <li>
-                  <a href="publications.html">
-                    Publications
+                  <a href="site-info.html">
+                    Site Info
                   </a>
                 </li>
               </ul>
