--- a/private.html
+++ b/private.html
@@ -8,7 +8,7 @@
     <title>
 Links    </title>
 
-    <link rel="shortcut icon" href="static/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
     <!-- CSS for Layout -->
     <link rel="stylesheet" type="text/css" href="theme/css/katex.min.css">
