--- a/greyline.html
+++ b/greyline.html
@@ -9,7 +9,7 @@
     <title>
 Greyline Map    </title>
 
-    <link rel="shortcut icon" href="static/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
     <!-- CSS for Layout -->
     <link rel="stylesheet" type="text/css" href="theme/css/katex.min.css">
