--- a/dark-chess.html
+++ b/dark-chess.html
@@ -201,9 +201,12 @@ Dark-Chess    </title>
 
 <textarea id="field" style="width: 100%; height: 400px;"></textarea>
 <hr/>
+<i>
+        The game is won by capturing your opponent's king.<br/><br/>
+</i>
         Game Options: <br/><i>must be set at beginning of game</i> <br/><br/>
 <input id="scouting" type="checkbox"/>
-        Allow attribution of state change to opponent's turn <br/>
+        Allow attribution of state change to opponent's turn (on replay)<br/>
 <input id="overrun" type="checkbox"/>
         Capturing pieces are revealed to opponent <br/>
 <input id="warn" type="checkbox"/>
@@ -211,9 +214,6 @@ Dark-Chess    </title>
 <input id="legal" type="checkbox"/>
         Disallow movement into and through check (forces warning)<br/>
 <br/>
-<i>
-        The game is won by capturing your opponent's king.<br/><br/>
-</i>
         And yes, it's simple to cheat. It's not interesting:
 
         <pre>JSON.parse(atob(window.location.search.substring(1))).p</pre>
