minor style edits; work on greyline

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-17 Fri 13:44 -->
+<!-- 2022-06-17 Fri 21:39 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -12,7 +12,7 @@
 <link rel="stylesheet" type="text/css" href="css/fonts.css">
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
-<script src="js/main.js"></script>
+<script async defer src="js/main.js"></script>
 </head>
 <body>
 <div id="preamble" class="boilerplate">
@@ -23,7 +23,7 @@
 <h1 class="title">Curriculum Vitae</h1>
 </header><table><tr><td width="300px"><center>
 
-<figure id="orgfb594dc">
+<figure id="org8dfbb4a">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -63,6 +63,9 @@ advised by <a href="http://www.yliuu.com">Yang Liu</a>
 <style type="text/css">
 p, main li {
   font-size: 18px;
+}
+nav li {
+  font-size: 21px;
 }
 .cv-block {
   font-size: 18px;
